[gd_scene load_steps=6 format=2]

[ext_resource path="res://elements/spaceship/Spaceship.gd" type="Script" id=1]
[ext_resource path="res://elements/bullet/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/spaceship.png" type="Texture" id=3]


[sub_resource type="Animation" id=2]

resource_name = "drill"
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.1 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=1]

resource_name = "idle"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}

[node name="Spaceship" type="Node2D"]
script = ExtResource( 1 )
move_speed = 200
damping = 0.95
shoot_cooldown = 0.25
drill_cooldown = 0.75
drill_time = 1
invulnerability_time = 2
Bullet = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="ShootCooldown" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="DrillTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="DrillCooldown" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="InvulnerabilityTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 23.8069, -0.732517 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/drill = SubResource( 2 )
anims/idle = SubResource( 1 )
blend_times = [  ]

